# ComfyUI-EasySAM3

./: README.md  README_zh.md  __init__.py  pyproject.toml  requirements.txt
utils/: patch.py  sam3_interactive.py
web/: sam3_points_editor.js  sam3_points_widget.js
